--- a/newatelierdjango/Templates/events/event_form.html
+++ b/newatelierdjango/Templates/events/event_form.html
@@ -3,7 +3,7 @@
 {% block content %}
     <form method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
-         {{ form }}
+         {{ form.as_p }}
             <input type="submit" value="Save" class="btn btn-primary"/>
             <input type="reset" value="Cancel" class="btn btn-dark"/>
     </form>
