--- a/newatelierdjango/Templates/header.html
+++ b/newatelierdjango/Templates/header.html
@@ -36,7 +36,12 @@
                 </li>
             </ul>
             <span class="navbar-text">
-                
+                {% if user.is_authenticated %}
+                {{user.username}}    <a href={% url 'logout' %}> Logout </a>
+                {% else %}
+                <a href={% url 'login' %}> Login </a>
+                <p> please login </p>
+                {% endif %}
             </span>
         </div>
     </div>
