--- a/newatelierdjango/Templates/header.html
+++ b/newatelierdjango/Templates/header.html
@@ -40,6 +40,7 @@
                 {{user.username}}    <a href={% url 'logout' %}> Logout </a>
                 {% else %}
                 <a href={% url 'login' %}> Login </a>
+                <a href={% url 'register' %}> Register </a>
                 <p> please login </p>
                 {% endif %}
             </span>
